--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "weidner/goutte": "^1.6"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.4.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
