--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,9 @@
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.12",
         "js-datepicker": "^5.18.0",
-        "vue-router": "^3.4.9"
+        "vue-router": "^3.4.9",
+        "object-path": ">=0.11.5",
+        "ini": ">=1.3.6",
+        "node-notifier": ">=8.0.1"
     }
 }
