--- a/server/package.json
+++ b/server/package.json
@@ -13,19 +13,20 @@
         "axios": ">=0.21.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
+        "ini": ">=1.3.6",
         "jquery": "^3.5.1",
+        "js-datepicker": "^5.18.0",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
+        "node-notifier": ">=8.0.1",
+        "object-path": ">=0.11.5",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.32.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.12",
-        "js-datepicker": "^5.18.0",
         "vue-router": "^3.4.9",
-        "object-path": ">=0.11.5",
-        "ini": ">=1.3.6",
-        "node-notifier": ">=8.0.1"
+        "vue-template-compiler": "^2.6.12",
+        "watchify": "^3.11.1"
     }
 }
