--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - DB_CONNECTION: mysql
       - DB_DATABASE: laravel_testing
       - DB_USERNAME: root
-    working_directory: ~/server
+    working_directory: ~/TennisApp/server
     steps:
       - checkout
       - run:
