--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - DB_CONNECTION: mysql
       - DB_DATABASE: laravel_testing
       - DB_USERNAME: root
-    working_directory: ~/TennisApp
+    working_directory: ~/TennisApp/server
     steps:
       - checkout
       - run:
@@ -21,15 +21,16 @@ jobs:
           command: sudo docker-php-ext-install pdo_mysql
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "server/composer.json" }}
+            - v1-dependencies-{{ checksum "composer.json" }}
             - v1-dependencies-
       - run:
+          working_directory: ~/TennisApp/server
           name: Install PHP libraries
           command: composer install -n --prefer-dist
       - save_cache:
           paths:
             - ./vendor
-          key: v1-dependencies-{{ checksum "server/composer.json" }}
+          key: v1-dependencies-{{ checksum "composer.json" }}
       - run:
           name: Run PHPUnit
           command: vendor/bin/phpunit
