--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,16 +2,17 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/php:7.2-node-browsers
+      - image: circleci/php:7.2.1-apache-node-browsers
       - image: circleci/mysql:5.7
     environment:
       - APP_DEBUG: true
       - APP_ENV: testing
+      - APP_KEY: =base64:yxzsYHn4oyivCjHhH4wq0+37CykF6WhOCOhgnqOE4B4=
       - DB_CONNECTION: mysql
       - DB_DATABASE: laravel_testing
       - DB_USERNAME: root
-      - MYSQL_ROOT_PASSWORD: password
       - DB_HOST: 127.0.0.1
+      - MYSQL_ALLOW_EMPTY_PASSWORD: true
     working_directory: ~/TennisApp
     steps:
       - checkout
@@ -33,4 +34,5 @@ jobs:
             - .server/vendor
           key: v1-dependencies-{{ checksum "./server/composer.json" }}
       - run: php ./server/artisan --env=testing
+      - run: php ./server/artisan migrate
       - run: php ./server/vendor/bin/phpunit --configuration=./server/phpunit.xml
