--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/php:7.2.1-apache-node-browsers
+      - image: circleci/php:7.2-node-browsers
       - image: circleci/mysql:5.7
     environment:
       - APP_DEBUG: true
