--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,19 @@ jobs:
     docker:
       - image: circleci/php:7.2-node-browsers
       - image: circleci/mysql:5.7
+        environment:
+          - MYSQL_DATABASE: laravel_testing
+          - MYSQL_ROOT_PASSWORD: password
     environment:
       - APP_DEBUG: true
       - APP_ENV: testing
       - APP_KEY: =base64:yxzsYHn4oyivCjHhH4wq0+37CykF6WhOCOhgnqOE4B4=
       - DB_CONNECTION: mysql
+      - DB_HOST: 127.0.0.1
       - DB_DATABASE: laravel_testing
       - DB_USERNAME: root
-      - DB_HOST: 127.0.0.1
-      - MYSQL_ALLOW_EMPTY_PASSWORD: true
+      - DB_PASSWORD: password
+
     working_directory: ~/TennisApp
     steps:
       - checkout
