FavoritePlayerComponentのリファクタ

--- a/server/public/mix-manifest.json
+++ b/server/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=79fd65ebeb3c7dacbc38",
+    "/css/app.css": "/css/app.css?id=2183e94ec5e5e61eba92"
 }
